--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Hello There,<br>
+              <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>I'm Anshif</span>
+                  <span>This is Anshif</span>
                   
                   <span>This is My personal Portolio</span>
                   <span>Welcome :)</span>
