--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <span id="typed-strings">
                   <span>This is Anshif</span>
                   
-                  <span>This is My personal Portolio</span>
+                  <span>This is My Portfolio</span>
                   <span>Welcome :)</span>
                 </span>
                 <span id="typed"></span>
