--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <span class="icon-bar"></span>
         </button>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
+      <div class="collapse navbar-collapse" id="navbar-collapse" ">
+        <ul class="nav navbar-nav " >
+          <li > <a href="./index.html" title="">01 : Home</a></li>
           <li><a href="./works.html" title="">02 : Works</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
@@ -57,11 +57,11 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Hello,<br>
+              <h1>Hello There,<br>
                 <span id="typed-strings">
-                  <span>This is Anshif</span>
+                  <span>I'm Anshif</span>
                   
-                  <span>This is My Portfolio</span>
+                  <span>This is My personal Portolio</span>
                   <span>Welcome :)</span>
                 </span>
                 <span id="typed"></span>
