--- a/works.html
+++ b/works.html
@@ -139,9 +139,9 @@
                       </a>
                       <div class="card-container">
                         <h4>006</h4>
-                        <h3>Lorem ipsum</h3>
-                        <p>Fusce sed Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod maxime dolores obcaecati ut repudiandae fugit labore, praesentium commodi minima sint, accusamus saepe similique quam facere unde voluptates libero corporis molestiae!.</p>
-                        <a href="./work.html" class="btn btn-default">Discover</a>
+                        <h3>History of Computer</h3>
+                        <p>This is the History of the computers which can navigate topic through sidenav</p>
+                        <a href="https://anshif14.github.io/sidenav/" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
