--- a/works.html
+++ b/works.html
@@ -156,8 +156,8 @@
                   </a>
                   <div class="card-container">
                     <h4>007</h4>
-                    <h3>lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere temporibus ab voluptatum fuga in molestias odit, molestiae quas nisi. Nobis id maxime accusamus maiores porro cupiditate odio earum molestiae cum!</p>
+                    <h3>Calculator</h3>
+                    <p>A Simple calculator using HTML CSS and JS</p>
                     <a href="https://anshif14.github.io/Music/" class="btn btn-default">Discover</a>
                   </div>
                 </div>
