--- a/works.html
+++ b/works.html
@@ -158,7 +158,7 @@
                     <h4>007</h4>
                     <h3>Calculator</h3>
                     <p>A Simple calculator using HTML CSS and JS</p>
-                    <a href="#javascript-base/calc/index.html" class="btn btn-default">Discover</a>
+                    <a href="javascript-base/calc/index.html" class="btn btn-default">Discover</a>
                   </div>
                 </div>
                  <div class="col-sm-4">
