--- a/works.html
+++ b/works.html
@@ -167,9 +167,9 @@
                     </a>
                     <div class="card-container">
                       <h4>008</h4>
-                      <h3>lorem ipsum</h3>
-                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui doloribus assumenda facilis rerum, quam vitae amet dolorum. Facere pariatur quam sed odit neque voluptatem, eos, maiores quasi velit eligendi molestias.</p>
-                      <a href="https://anshif14.github.io/basic-webpages/stupa.html#" class="btn btn-default">Discover</a>
+                      <h3>clock</h3>
+                      <p>basic clock with HTML CSS AND JS</p>
+                      <a href="https://anshif14.github.io/javascript-base/time/index.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                   
