--- a/works.html
+++ b/works.html
@@ -187,11 +187,7 @@
                   
               </div>
               <!--/row-->
-          </div>
-            <!--/item-->
-        </div>
-        <!--/carousel-inner--> 
-         <div class="item">
+              <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
                     <a href="./work.html" class="black-image-project-hover">
@@ -229,6 +225,12 @@
                     </div>
                     
                 </div>
+                <!-- row-- -->
+          </div>
+            <!--/item-->
+        </div>
+        <!--/carousel-inner--> 
+
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
 
         <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
@@ -263,7 +265,6 @@
 </script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -274,7 +275,6 @@
   ga('create', 'UA-XXXXX-X', 'auto');
   ga('send', 'pageview');
 </script>
-
 --> <script type="text/javascript" src="./main.70a66962.js"></script></body>
 
 </html>
